# os-labs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cp/: CMakeLists.txt
cp/docs/: cp.tex
cp/include/: shared_memory.h  utils.h
cp/src/: client.cpp  server.cpp  shared_memory.cpp  utils.cpp
lab1/: CMakeLists.txt  main.c
lab1/docs/: lab1.tex
lab1/include/: error_handling.h  lab1.h  test.h
lab1/src/: child.c  lab1.c  test.c  utils.c
lab2/: CMakeLists.txt  main.c
lab2/docs/: lab2.tex
lab2/include/: blur.h
lab2/src/: blur.c
lab3/: CMakeLists.txt  main.c
lab3/docs/: lab3.tex
lab3/include/: lab3.h  utils.h
lab3/src/: child.c  lab3.c  utils.c
lab4/: CMakeLists.txt  dynamic_main.cpp  static_main.cpp
lab4/docs/: lab4.tex
lab4/include/: lib.h  utils.h
lab4/src/: lib1.c  lib1.cpp  lib2.c  lib2.cpp  utils.cpp
lab5/: CMakeLists.txt
lab5/include/: node.h  socket.h  topology.h
lab5/src/: client.cpp  node.cpp  server.cpp  socket.cpp  topology.cpp
lab5_7/: CMakeLists.txt
lab5_7/docs/: lab5_7.tex
lab5_7/include/: node.h  socket.h
lab5_7/src/: client.cpp  node.cpp  socket.cpp
lab8/: lab8.tex
tests/: CMakeLists.txt  cp_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_lib1_test.cpp  lab4_lib2_test.cpp  lab4_test.cpp  lab5_test.cpp
